--- a/src/interface/style.css
+++ b/src/interface/style.css
@@ -55,7 +55,7 @@ form label {
     font-size: 16px;
     display: block;
     margin: 10px 0;
-    color: #ffffff; /* Gris oscuro */
+    color: #0c0c0c; /* Gris oscuro */
 }
 
 form input,
