--- a/src/interface/style.css
+++ b/src/interface/style.css
@@ -113,8 +113,6 @@ form button:hover {
     background-color: #fff; /* Blanco */
 }
 
-
-
 .cancha-info {
     flex: 1;
     margin-left: 20px;
@@ -130,8 +128,10 @@ form button:hover {
     margin: 0;
 }
 
-
-#reserva{
-    background-color: #2e2d2d;
-    color: #000000;
+img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
+
